<resources>
    <string name="app_name">Demo Dialog</string>
    <string name="d1">Demo 1-simple dialog</string>
    <string name="d2">Demo 2-Buttons dialog</string>
    <string name="enter">Enter Some Text</string>
    <string name="d3">Demo 3-Text input dialog</string>
    <string name="excercise3">Excercise 3</string>
    <string name="enter1">Enter number 1 :</string>
    <string name="enter2">"Enter number 2 :"</string>
    <string name="demo4">Demo 4-datepicker dialog</string>
    <string name="demo5">Demo 5-Timepicker dialog</string>
</resources>
