<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">


    <Button
        android:id="@+id/buttonDemo1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/d1" />

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/buttonDemo2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/d2" />

        <TextView
            android:id="@+id/TextViewDemo2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="TextView"/>

    </LinearLayout>


    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/buttonDemo3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/d3" />

        <TextView
            android:id="@+id/TextViewDemo3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="TextView"/>

    </LinearLayout>


    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/buttonDemoExcercise3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/excercise3" />

        <TextView
            android:id="@+id/TextViewDemoExcercise3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="TextView"/>

    </LinearLayout>


    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/buttonDemo4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/demo4" />

        <TextView
            android:id="@+id/TextViewDemo4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="TextView"/>

    </LinearLayout>


    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/buttonDemo5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/demo5" />

        <TextView
            android:id="@+id/TextViewDemo5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="TextView"/>

    </LinearLayout>



</LinearLayout>